src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginCanvasContent.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

<Canvas Height="450" Width="450" Background="yellow">

	<Button Height="100" Width="100" Canvas.Top="135" Margin="-50" />
	<Button Height="100" Width="100" Canvas.Right="13" Margin="-15,5,10,10" />
	<Button Height="100" Width="100" Canvas.Bottom="225" Margin="-10,-20,-30,-40" />
	<Button Height="100" Width="100" Canvas.Left="99" Margin="-10,10" />
	<Button Height="100" Width="100" Canvas.Bottom="101" Canvas.Right="77" Margin="-25" />
	<Button Height="100" Width="100" Canvas.Left="101" Canvas.Top="177" Margin="25,-75,-35,-25" />
	<Button Height="100" Width="100" Canvas.Bottom="401" Canvas.Left="177" Margin="25,25,-25,-25" />
	<Button Height="100" Width="100" Canvas.Bottom="1" Canvas.Left="7" Margin="50,50,-50,-50" />
	<Button Height="100" Width="100" Canvas.Top="101" Canvas.Left="77" Margin="100,100,-100,-100" />

</Canvas>

</Grid>
